fix: adjust margin for color switcher preview for better alignment

--- a/public/global.css
+++ b/public/global.css
@@ -149,7 +149,7 @@ button:hover {
 }
 .color-switcher-preview {
   justify-content: center;
-  margin: 1em 0 0.5em 0;
+
 }
 .color-switcher-inline {
   margin-left: auto;
